--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -17,6 +17,7 @@
 
     <item android:id="@+id/nav_home"
         android:icon="@drawable/ic_home_black_24dp"
+        android:checked="true"
         android:title="@string/nav_drawer_item_home"/>
 
     <item android:id="@+id/nav_events"
