--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.youthexploringscience.youthexploringscience.MainActivity">
+    tools:context="com.youthexploringscience.youthexploringscience.primary.MainActivity">
 
     <FrameLayout
         android:id="@+id/main_content_frame"
