--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,16 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="primary_activity_button_style_landscape">
+        <item name="android:layout_width">@dimen/primary_activity_button_size_landscape</item>
+        <item name="android:layout_height">@dimen/primary_activity_button_size_landscape</item>
+        <item name="android:scaleType">fitCenter</item>
+    </style>
+
+    <style name="primary_activity_button_style">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:scaleType">fitCenter</item>
+    </style>
+
 </resources>
