--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -20,67 +20,73 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     tools:context="com.youthexploringscience.youthexploringscience.primary.MainActivity">
-
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingEnd="@dimen/primary_activity_constraint_layout_landscape_padding_start_end"
-        android:paddingStart="@dimen/primary_activity_constraint_layout_landscape_padding_start_end">
+        android:padding="@dimen/primary_activity_constraint_layout_padding">
 
         <ImageView
-            android:id="@+id/yes_logo_image"
+            android:id="@+id/yes_logo"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/primary_activity_logo_image_height_landscape"
-            android:layout_marginBottom="@dimen/primary_activity_logo_image_bottom_margin_landscape"
+            android:layout_height="60dp"
+            android:layout_marginBottom="16dp"
+            android:background="@color/colorAccent"
             android:contentDescription="@string/content_description_yes_logo_image"
-            android:src="@drawable/yes_logo"
-            app:layout_constraintBottom_toTopOf="@+id/paylocity_website_button"
+            app:layout_constraintBottom_toTopOf="@+id/student_website_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageButton
-            android:id="@+id/paylocity_website_button"
-            style="@style/primary_activity_button_style_landscape"
-            android:contentDescription="@string/content_description_paylocity_website_button"
-            android:src="@drawable/pay"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/slsc_website_button"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/yes_logo_image" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_yeslogo" />
 
         <ImageButton
             android:id="@+id/slsc_website_button"
-            style="@style/primary_activity_button_style_landscape"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:layout_marginBottom="8dp"
+            android:background="@color/colorBackground"
             android:contentDescription="@string/content_description_saint_louis_science_center_website_button"
-            android:src="@drawable/science_center"
-            app:layout_constraintBottom_toBottomOf="@+id/paylocity_website_button"
-            app:layout_constraintEnd_toStartOf="@id/student_website_button"
-            app:layout_constraintStart_toEndOf="@id/paylocity_website_button"
-            app:layout_constraintTop_toTopOf="@+id/paylocity_website_button" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/student_website_button"
+            app:srcCompat="@drawable/ic_stlouis" />
 
         <ImageButton
             android:id="@+id/student_website_button"
-            style="@style/primary_activity_button_style_landscape"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:layout_marginTop="2dp"
+            android:background="@color/colorBackground"
             android:contentDescription="@string/content_description_student_website_button"
-            android:src="@drawable/student"
-            app:layout_constraintBottom_toBottomOf="@+id/slsc_website_button"
-            app:layout_constraintEnd_toStartOf="@id/yes_website_button"
-            app:layout_constraintStart_toEndOf="@id/slsc_website_button"
-            app:layout_constraintTop_toTopOf="@+id/slsc_website_button" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/yes_logo"
+            app:srcCompat="@drawable/ic_graduation" />
 
         <ImageButton
             android:id="@+id/yes_website_button"
-            style="@style/primary_activity_button_style_landscape"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:layout_marginBottom="2dp"
+            android:background="@color/colorBackground"
             android:contentDescription="@string/content_description_youth_exploring_science_website_button"
-            android:src="@drawable/yes_circle"
-            app:layout_constraintBottom_toBottomOf="@+id/student_website_button"
+            app:layout_constraintBottom_toTopOf="@+id/slsc_website_button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/student_website_button"
-            app:layout_constraintTop_toTopOf="@+id/student_website_button" />
+            app:layout_constraintTop_toBottomOf="@+id/yes_logo"
+            app:srcCompat="@drawable/ic_yescircle" />
 
+        <ImageButton
+            android:id="@+id/paylocity_website_button"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:layout_marginBottom="8dp"
+            android:background="@color/colorBackground"
+            android:contentDescription="@string/content_description_paylocity_website_button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/yes_website_button"
+            app:srcCompat="@drawable/ic_paylocity" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -90,6 +96,9 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/navigation_header"
+        android:background="@color/colorPrimaryDark"
+        app:itemTextColor="@color/colorPrimary"
+        app:itemIconTint="@color/colorPrimary"
         app:menu="@menu/navigation_menu" />
 
 </android.support.v4.widget.DrawerLayout>
