--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     tools:context="com.youthexploringscience.youthexploringscience.primary.MainActivity">
 
     <android.support.constraint.ConstraintLayout
@@ -27,57 +28,76 @@
         android:layout_height="match_parent"
         android:padding="@dimen/primary_activity_constraint_layout_padding">
 
-        <!-- TODO replace stock image with YES logo -->
         <ImageView
-            android:id="@+id/yes_logo_image"
+            android:id="@+id/yes_logo"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/primary_activity_logo_image_height"
+            android:layout_height="150dp"
+            android:layout_marginBottom="8dp"
+            android:background="@color/colorAccent"
             android:contentDescription="@string/content_description_yes_logo_image"
+            app:layout_constraintBottom_toTopOf="@+id/paylocity_website_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_yeslogo" />
 
-        <ImageButton
-            android:id="@+id/paylocity_website_button"
-            style="@style/primary_activity_button_style"
-            android:contentDescription="@string/content_description_paylocity_website_button"
-            android:src="@drawable/pay"
-            app:layout_constraintBottom_toTopOf="@id/student_website_button"
-            app:layout_constraintEnd_toStartOf="@id/slsc_website_button"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/yes_logo_image" />
-
-        <!-- TODO replace stock image with SLSC image -->
         <ImageButton
             android:id="@+id/slsc_website_button"
-            style="@style/primary_activity_button_style"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginTop="24dp"
+            android:background="@color/colorBackground"
             android:contentDescription="@string/content_description_saint_louis_science_center_website_button"
-            android:src="@drawable/student"
-            app:layout_constraintBottom_toTopOf="@+id/yes_website_button"
+            android:paddingTop="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/student_website_button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/paylocity_website_button"
-            app:layout_constraintTop_toBottomOf="@id/yes_logo_image" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/yes_website_button"
+            app:srcCompat="@drawable/ic_stlouis" />
 
         <ImageButton
             android:id="@+id/student_website_button"
-            style="@style/primary_activity_button_style"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginBottom="8dp"
+            android:background="@color/colorBackground"
             android:contentDescription="@string/content_description_student_website_button"
-            android:src="@drawable/student"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/yes_website_button"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/paylocity_website_button" />
-
-        <!-- TODO replace stock image with YES logo image -->
-        <ImageButton
-            android:id="@+id/yes_website_button"
-            style="@style/primary_activity_button_style"
-            android:contentDescription="@string/content_description_youth_exploring_science_website_button"
-            android:src="@drawable/student"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/student_website_button"
-            app:layout_constraintTop_toBottomOf="@id/slsc_website_button" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/slsc_website_button"
+            app:srcCompat="@drawable/ic_graduation"
+            />
+
+        <ImageButton
+            android:id="@+id/yes_website_button"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+
+            android:layout_marginTop="16dp"
+            android:background="@color/colorBackground"
+            android:contentDescription="@string/content_description_youth_exploring_science_website_button"
+            app:layout_constraintBottom_toTopOf="@+id/slsc_website_button"
+            app:layout_constraintEnd_toEndOf="parent"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/paylocity_website_button"
+            app:srcCompat="@drawable/ic_yescircle" />
+
+        <ImageButton
+            android:id="@+id/paylocity_website_button"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginTop="8dp"
+
+            android:background="@color/colorBackground"
+            android:contentDescription="@string/content_description_paylocity_website_button"
+
+            app:layout_constraintBottom_toTopOf="@+id/yes_website_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/yes_logo"
+            app:srcCompat="@drawable/ic_paylocity" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -87,6 +107,9 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/navigation_header"
+        android:background="@color/colorPrimaryDark"
+        app:itemTextColor="@color/colorPrimary"
+        app:itemIconTint="@color/colorPrimary"
         app:menu="@menu/navigation_menu" />
 
 </android.support.v4.widget.DrawerLayout>
