--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -21,7 +21,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context="com.youthexploringscience.youthexploringscience.primary.MainActivity">
+    tools:context="com.youthexploringscience.youthexploringscience.ui.MainActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
