--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -14,91 +14,44 @@
   ~ limitations under the License.
   -->
 
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/bigcontainer_landscape"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorBackground"
-    tools:context="com.youthexploringscience.youthexploringscience.ui.MainActivity">
+    android:layout_height="match_parent">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/main_layout_portrait"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/primary_activity_constraint_layout_padding">
+        android:background="@color/colorBackground"
+        tools:context="com.youthexploringscience.youthexploringscience.ui.MainActivity"
+        android:layout_weight="9">
 
-        <ImageView
-            android:id="@+id/yes_logo"
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginBottom="16dp"
-            android:background="@color/colorAccent"
-            android:contentDescription="@string/content_description_yes_logo_image"
-            app:layout_constraintBottom_toTopOf="@+id/student_website_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_yeslogo" />
+            android:layout_height="match_parent">
+        </android.support.v4.view.ViewPager>
 
-        <ImageButton
-            android:id="@+id/slsc_website_button"
-            android:layout_width="wrap_content"
-            android:layout_height="80dp"
-            android:layout_marginBottom="8dp"
-            android:background="@color/colorBackground"
-            android:contentDescription="@string/content_description_saint_louis_science_center_website_button"
+        <android.support.design.widget.BottomNavigationView
+            android:id="@+id/navigation_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="start"
+            android:background="@color/colorBottomnNav"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/navigation_header"
+            app:itemBackground="@color/colorBottomnNav"
+            app:itemIconTint="@color/colorPrimary"
+            app:itemTextColor="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/student_website_button"
-            app:srcCompat="@drawable/ic_stlouis" />
-
-        <ImageButton
-            android:id="@+id/student_website_button"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:layout_marginTop="2dp"
-            android:background="@color/colorBackground"
-            android:contentDescription="@string/content_description_student_website_button"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/yes_logo"
-            app:srcCompat="@drawable/ic_graduation" />
-
-        <ImageButton
-            android:id="@+id/yes_website_button"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:layout_marginBottom="2dp"
-            android:background="@color/colorBackground"
-            android:contentDescription="@string/content_description_youth_exploring_science_website_button"
-            app:layout_constraintBottom_toTopOf="@+id/slsc_website_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/yes_logo"
-            app:srcCompat="@drawable/ic_yescircle" />
-
-        <ImageButton
-            android:id="@+id/paylocity_website_button"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:layout_marginBottom="8dp"
-            android:background="@color/colorBackground"
-            android:contentDescription="@string/content_description_paylocity_website_button"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/yes_website_button"
-            app:srcCompat="@drawable/ic_paylocity" />
-
+            app:menu="@menu/navigation_menu"
+            />
     </android.support.constraint.ConstraintLayout>
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/navigation_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/navigation_header"
-        android:background="@color/colorPrimaryDark"
-        app:itemTextColor="@color/colorPrimary"
-        app:itemIconTint="@color/colorPrimary"
-        app:menu="@menu/navigation_menu" />
+</android.support.design.widget.CoordinatorLayout>
 
-</android.support.v4.widget.DrawerLayout>
