--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="yes_logo_landscape">120dp</dimen>
+    <dimen name="paylocity_landscape">100dp</dimen>
+    <dimen name="studentsite_landscape">80dp</dimen>
+    <dimen name="stlouis_landscape">80dp</dimen>
+
+    <dimen name="topbanner_portrait">150dp</dimen>
+    <dimen name="yes_logo_portrait">100dp</dimen>
+    <dimen name="paylocity_portrait">110dp</dimen>
+    <dimen name="studentsite_portrait">80dp</dimen>
+    <dimen name="stlouis_portrait">80dp</dimen>
+
+    <dimen name="studentsite_portrait_padding">24dp</dimen>
+
     <dimen name="primary_activity_button_size_landscape">100dp</dimen>
-    <dimen name="primary_activity_logo_image_height_landscape">120dp</dimen>
-    <dimen name="primary_activity_logo_image_bottom_margin_landscape">16dp</dimen>
-    <dimen name="primary_activity_constraint_layout_landscape_padding_start_end">0dp</dimen>
-    <dimen name="primary_activity_logo_image_height">100dp</dimen>
-    <dimen name="primary_activity_constraint_layout_padding">8dp</dimen>
+    <dimen name="primary_activity_constraint_layout_padding">16dp</dimen>
 </resources>
