--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,6 +17,9 @@
     <dimen name="stlouis_portrait">80dp</dimen>
 
     <dimen name="studentsite_portrait_padding">24dp</dimen>
+    <dimen name="calendar_title_margin">16dp</dimen>
+    <dimen name="calendar_title_width">100dp</dimen>
+    <dimen name="calendar_title_height">100dp</dimen>
 
     <dimen name="primary_activity_button_size_landscape">100dp</dimen>
     <dimen name="primary_activity_constraint_layout_padding">16dp</dimen>
